--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/AppTheme">
 
         <activity
+            android:name=".AddBookActivity"
+            android:exported="false"/>
+
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
@@ -20,7 +24,7 @@
             android:exported="false" />
         <activity
             android:name=".WelcomeActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,10 +38,6 @@
         <meta-data
             android:name="com.google.mlkit.vision.DEPENDENCIES"
             android:value="barcode_ui" />
-
-        <activity
-            android:name=".CodeScannerActivity"
-            android:exported="false" />
     </application>
 
 </manifest>
