--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation project(':internal:chooserx')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.zxing:core:3.4.1'
 
     implementation 'com.google.android.gms:play-services-code-scanner:16.1.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
