--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:taskAffinity=""
         android:theme="@style/AppTheme">
         <activity
-            android:name=".UserActivity"
-            android:exported="false" />
-        <activity
             android:name=".BooksActivity"
+            android:exported="false"
+            android:label="@string/title_activity_books" />
+        <activity
+            android:name=".UserActivity"
             android:exported="false" />
         <activity
             android:name=".AdminActivity"
