--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,9 @@
         android:taskAffinity=""
         android:theme="@style/AppTheme">
         <activity
-            android:name=".BooksActivity"
-            android:exported="false"
-            android:label="@string/title_activity_books" />
-        <activity
-            android:name=".UserActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AdminActivity"
-            android:exported="false" />
+            android:name=".MainActivity"
+            android:exported="false"/>
+
         <activity
             android:name=".AddUserActivity"
             android:exported="false" />
@@ -28,19 +22,18 @@
             android:name=".AddBookActivity"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
-            android:exported="false" />
-        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
             android:name=".WelcomeActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <meta-data
