--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
         android:icon="@drawable/libreria_icon"
         android:label="@string/app_name"
         android:taskAffinity=""
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".AddLendingActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
