--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:taskAffinity=""
         android:theme="@style/AppTheme">
         <activity
+            android:name=".AddAdminActivity"
+            android:exported="false" />
+        <activity
             android:name=".BookReturnActivity"
             android:exported="false" />
         <activity
